feat: added events run route

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --ignore-path .gitignore --check \"**/*.+(js|ts|json)\"",
-    "format:fix": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
+    "format:fix": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+    "ci:check": "pnpm lint && pnpm format",
+    "ci:fix": "pnpm lint:fix && pnpm format:fix"
   },
   "keywords": [],
   "author": "",
